--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 requests = "^2.23.0"
 ipykernel = "^5.3.0"
+mecab-python3 = "^0.996.5"
 
 [tool.poetry.dev-dependencies]
 
