--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ matplotlib = "^3.2.1"
 plotly = "^4.8.1"
 cabocha = {git = "https://github.com/kenkov/cabocha", rev = "0.1.4"}
 pandas = "^1.0.5"
+lxml = "^4.5.1"
+networkx = "^2.4"
+pygraphviz = "^1.5"
 
 [tool.poetry.dev-dependencies]
 
